outputs_20260328-045328-557e4a00/codegen/production/build_logs/compiler_stderr.log
C:\Users\KENNET~1\AppData\Local\Temp\tdd_build_u1xd8abs\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\KENNET~1\AppData\Local\Temp\tdd_build_u1xd8abs\src\gtm_tom_3_phase_inverter_pwm.c:187:33: error: incompatible types when assigning to type 'IfxGtm_Pwm_ClockSource' from type 'int'
  187 |     config.clockSource        = IfxGtm_Cmu_Clk_0;                 /* Use first FXCLK (CLK0) */
      |                                 ^~~~~~~~~~~~~~~~
